styles/style.css
.content-section {
  font-weight: 400;
  /* praktikum +- ok: -0.15px  */
  /* me +- ok: 0.1px */
  letter-spacing: -0.15px;
}

.header {
  /* figma absolute 92px 49px 92px 51px; */
  padding: 92px 51px;
  display: grid;
  grid-template-columns: repeat(4, 1fr) repeat(1, 2fr) repeat(4, 1fr);
  /* place-content: space-evenly; */
  font-size: 18px;
}

.header__menu {
  grid-column: span 4;
  display: flex;
  align-items: center;
}

.header__links-list {
  display: flex;
  flex-direction: row;
  gap: 31px;
  list-style-type: circle;
}

.header__link {
  text-decoration: underline;
  text-underline-offset: 18%;
}

.header__link-active {
  text-decoration: none;
}

.list-item_no_bullit {
  list-style: none;
}

.header__logo {
  display: block;
  grid-column: 5 / 6;
  justify-self: center;
}

.header__logo-image {
  width: 148px;
  height: 105px;
}

.header__address {
  grid-column: 6 / -1;
  display: flex;
  flex-direction: column;
  justify-content: center;
  justify-self: end;
  line-height: 1.35;
  font-style: normal;
}

.header__address-phone,
.header__address-email {
  text-underline-offset: 17%;
}

.cover {
  /* z-index: -1; */
  position: relative;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  padding-top: 165px;
  height: 757px;
  color: #fff;
  /* https://developer.mozilla.org/en-US/docs/Web/CSS/background#syntax */
  background: no-repeat center/100% url('../images/cover.jpg');
  line-height: 1.15;
}

.cover::before {
  z-index: 0;
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  content: '';
  background-color: rgba(0, 0, 0, 0.6);
}

.cover__title {
  z-index: 1;
  position: relative;
  padding: 0 50px;
  display: flex;
  flex-direction: column;
  gap: 20px;
  font-size: 100px;
  font-weight: 700;
  letter-spacing: 30px;
  text-transform: uppercase;
}

.cover__description {
  padding: 0 50px 50px;
  z-index: 1;
  position: relative;
  display: flex;
  gap: 78px;
  justify-content: flex-end;
  align-items: center;
  line-height: 1.27;
  text-align: center;
  font-size: 22px;
  font-weight: 400;
  text-transform: uppercase;
}

.cover__description-text {
  /* before: 2cap, safari not support cap value */
  word-spacing: 0.5em;
}

.aligned-text_center {
  text-align: center;
}

.aligned-text_right {
  text-align: right;
}

.letter-spacing-extended {
  letter-spacing: 60px;
}

.no-letter-spacing {
  letter-spacing: 0;
}

.bet-button {
  padding: 12px 32px;
  background: transparent;
  border: 1px solid #fff;
  color: #fff;
  font-size: 22px;
  font-weight: 400;
  text-transform: uppercase;
  transition: 0.1s;
}

.cover__description .bet-button:hover {
  background-color: rgba(7, 7, 7, 0.2);
}

